--- a/firmware/config.h.example
+++ b/firmware/config.h.example
@@ -5,7 +5,7 @@
 #define SSID "ssid"
 #define PASSWORD "pass"
 
-// Computers MAC address 
+// Computer's MAC address 
 #define MAC_ADDRESS "00:00:00:00:00:00"
 
 // Credentials needed to connect to Blynk services, given in the Blynk project configuration site
